--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "code",
   "version": "1.0.0",
   "description": "使用vue node mongodb重构",
-  "main": "index.js",
+  "main": "server/index.js",
+  "babel": {
+    "presets": "latest"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +20,15 @@
   },
   "homepage": "https://github.com/HiLanner/rebuild-my-travel-website#readme",
   "devDependencies": {
+    "autoprefix": "^1.0.1",
+    "babel-preset-env": "^1.1.10",
+    "css-loader": "^0.26.2",
+    "file-loader": "^0.10.1",
+    "postcss-loader": "^1.3.2",
+    "style-loader": "^0.13.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.5.0",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1"
   }
 }
