--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "使用vue node mongodb重构",
   "main": "server/index.js",
-  "babel": {
-    "presets": "latest"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -21,7 +20,10 @@
   "homepage": "https://github.com/HiLanner/rebuild-my-travel-website#readme",
   "devDependencies": {
     "autoprefix": "^1.0.1",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
     "babel-preset-env": "^1.1.10",
+    "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.2",
     "file-loader": "^0.10.1",
     "postcss-loader": "^1.3.2",
@@ -29,6 +31,6 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^2.5.0",
     "url-loader": "^0.5.8",
-    "webpack": "^2.2.1"
+    "webpack": "^1.13.0"
   }
 }
