--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code",
   "version": "1.0.0",
   "description": "使用vue node mongodb重构",
-  "main": "server/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
@@ -25,12 +25,30 @@
     "babel-preset-env": "^1.1.10",
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.2",
+    "express": "^4.14.0",
     "file-loader": "^0.10.1",
     "postcss-loader": "^1.3.2",
     "style-loader": "^0.13.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.5.0",
     "url-loader": "^0.5.8",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "config-lite": "^1.5.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
+    "express-formidable": "^1.0.0",
+    "express-session": "^1.15.1",
+    "express-winston": "^2.3.0",
+    "marked": "^0.3.6",
+    "moment": "^2.17.1",
+    "mongolass": "^2.4.2",
+    "objectid-to-timestamp": "^1.3.0",
+    "sha1": "^1.1.1",
+    "winston": "^2.3.1"
   }
 }
