--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.2",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.1",
+    "html-webpack-plugin": "^2.28.0",
     "postcss-loader": "^1.3.2",
     "style-loader": "^0.13.2",
     "stylus": "^0.54.5",
