--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server --config ./webpack-dev-server.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
     "postcss-loader": "^1.3.2",
+    "raw-loader": "^0.5.1",
     "style-loader": "^0.13.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.5.0",
