--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "webpack-dev-server --config ./webpack-dev-server.js"
+    "dev": "webpack-dev-server --config ./webpack-dev-server.js",
+    "start": "node ./server/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "babel-preset-env": "^1.1.10",
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.2",
+    "ejs-loader": "^0.3.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.1",
