--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "config": "^2.0.2",
     "config-lite": "^1.5.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
@@ -52,6 +53,7 @@
     "marked": "^0.3.6",
     "moment": "^2.17.1",
     "mongolass": "^2.4.2",
+    "multer": "^1.4.2",
     "objectid-to-timestamp": "^1.3.0",
     "sha1": "^1.1.1",
     "winston": "^2.3.1"
